// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceRoleEditor renders the component 1`] = `
<SpaceRoleEditor
  buttonProps={
    Object {
      "className": "",
    }
  }
  className=""
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "name": "Police officer",
        "sys": Object {
          "id": "police",
        },
      },
      Object {
        "name": "Thief",
        "sys": Object {
          "id": "thief",
        },
      },
    ]
  }
  value={Array []}
>
  <Dropdown
    className=""
    getContainerRef={[Function]}
    isOpen={false}
    onClose={[Function]}
    position="bottom-left"
    style={
      Object {
        "maxWidth": "100%",
      }
    }
    testId="cf-ui-dropdown"
    toggleElement={
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="space-role-editor.button"
        type="button"
      >
        Select a role
      </Button>
    }
  >
    <div
      className="Dropdown__Dropdown___1qyn8"
      data-test-id="cf-ui-dropdown"
      onClose={[Function]}
      position="bottom-left"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="space-role-editor.button"
        type="button"
      >
        <button
          className="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
          data-test-id="space-role-editor.button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <TabFocusTrap
            className="Button__Button__inner-wrapper___3qrNC"
          >
            <span
              className="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabIndex={-1}
            >
              <span
                className="Button__Button__label___3tcOj"
              >
                Select a role
              </span>
              <Icon
                color="secondary"
                icon="ArrowDown"
                size="small"
                testId="cf-ui-icon"
              >
                <ArrowDown
                  className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                    data-test-id="cf-ui-icon"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </ArrowDown>
              </Icon>
              <CSSTransition
                classNames={
                  Object {
                    "enter": "Button__Button--spinner--enter___1qgg7",
                    "enterActive": "Button__Button--spinner-active___EEKjQ",
                    "exit": "Button__Button--spinner--exit___2RUI-",
                    "exitActive": "Button__Button--spinner-exit-active___3HXa7",
                  }
                }
                in={false}
                mountOnEnter={true}
                timeout={1000}
                unmountOnExit={true}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={true}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={1000}
                  unmountOnExit={true}
                />
              </CSSTransition>
            </span>
          </TabFocusTrap>
        </button>
      </Button>
    </div>
  </Dropdown>
</SpaceRoleEditor>
`;

exports[`SpaceRoleEditor shows a list of options 1`] = `
.emotion-1 {
  display: grid;
  grid-template-columns: min-content auto;
  grid-column-gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a3039;
}

.emotion-0 {
  color: #8091a5;
  grid-column-start: 2;
  max-width: 200px;
  white-space: normal;
}

<SpaceRoleEditor
  buttonProps={
    Object {
      "className": "",
    }
  }
  className=""
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "name": "Police officer",
        "sys": Object {
          "id": "police",
        },
      },
      Object {
        "name": "Thief",
        "sys": Object {
          "id": "thief",
        },
      },
    ]
  }
  value={Array []}
>
  <Dropdown
    className=""
    getContainerRef={[Function]}
    isOpen={true}
    onClose={[Function]}
    position="bottom-left"
    style={
      Object {
        "maxWidth": "100%",
      }
    }
    testId="cf-ui-dropdown"
    toggleElement={
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="space-role-editor.button"
        type="button"
      >
        Select a role
      </Button>
    }
  >
    <div
      className="Dropdown__Dropdown___1qyn8"
      data-test-id="cf-ui-dropdown"
      onClose={[Function]}
      position="bottom-left"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="space-role-editor.button"
        type="button"
      >
        <button
          className="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
          data-test-id="space-role-editor.button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <TabFocusTrap
            className="Button__Button__inner-wrapper___3qrNC"
          >
            <span
              className="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabIndex={-1}
            >
              <span
                className="Button__Button__label___3tcOj"
              >
                Select a role
              </span>
              <Icon
                color="secondary"
                icon="ArrowDown"
                size="small"
                testId="cf-ui-icon"
              >
                <ArrowDown
                  className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                    data-test-id="cf-ui-icon"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </ArrowDown>
              </Icon>
              <CSSTransition
                classNames={
                  Object {
                    "enter": "Button__Button--spinner--enter___1qgg7",
                    "enterActive": "Button__Button--spinner-active___EEKjQ",
                    "exit": "Button__Button--spinner--exit___2RUI-",
                    "exitActive": "Button__Button--spinner-exit-active___3HXa7",
                  }
                }
                in={false}
                mountOnEnter={true}
                timeout={1000}
                unmountOnExit={true}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={true}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={1000}
                  unmountOnExit={true}
                />
              </CSSTransition>
            </span>
          </TabFocusTrap>
        </button>
      </Button>
      <DropdownContainer
        anchorDimensionsAndPositon={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
        dropdownAnchor={
          <div
            class="Dropdown__Dropdown___1qyn8"
            data-test-id="cf-ui-dropdown"
            position="bottom-left"
            style="max-width: 100%;"
          >
            <button
              class="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
              data-test-id="space-role-editor.button"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                tabindex="-1"
              >
                <span
                  class="Button__Button__label___3tcOj"
                >
                  Select a role
                </span>
                <svg
                  class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
          </div>
        }
        getRef={[Function]}
        onClose={[Function]}
        openSubmenu={[Function]}
        position="bottom-left"
        submenu={false}
        testId="cf-ui-dropdown-portal"
      >
        <Portal
          containerInfo={
            .emotion-1 {
  display: grid;
  grid-template-columns: min-content auto;
  grid-column-gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2a3039;
}

.emotion-0 {
  color: #8091a5;
  grid-column-start: 2;
  max-width: 200px;
  white-space: normal;
}

<div>
              <div
                class="DropdownContainer__DropdownContainer___3WlJM"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="InViewport__InViewport___2o6g4"
                  data-test-id="cf-ui-in-viewport"
                  offset="0"
                >
                  <ul
                    class="DropdownList__DropdownList___2EMLM"
                    data-test-id="cf-ui-dropdown-list"
                    style="max-height: auto; overflow-y: visible;"
                  >
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                      data-test-id="space-role-editor.admin-option"
                    >
                      <button
                        class="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                        data-test-id="cf-ui-dropdown-list-item-button"
                        type="button"
                      >
                        <span
                          class="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                          >
                            <input
                              aria-label="Admin"
                              class="ControlledInput__ControlledInput___2XK3j"
                              data-test-id="ctf-ui-checkbox"
                              id="__cf_builtin_admin"
                              type="checkbox"
                              value=""
                            />
                            <div>
                              Admin
                            </div>
                            <div
                              class="emotion-0"
                            >
                              Can manage everything in the space
                            </div>
                          </div>
                        </span>
                      </button>
                    </li>
                  </ul>
                  <ul
                    class="DropdownList__DropdownList___2EMLM DropdownList__DropdownList--border-top___ojlyY"
                    data-test-id="cf-ui-dropdown-list"
                    style="max-height: 305px; overflow-y: auto;"
                  >
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem--title___CyVKB"
                      data-test-id="cf-ui-dropdown-list-item"
                    >
                      <span>
                        other roles
                      </span>
                    </li>
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                      data-test-id="space-role-editor.role-option"
                    >
                      <button
                        class="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                        data-test-id="cf-ui-dropdown-list-item-button"
                        type="button"
                      >
                        <span
                          class="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                          >
                            <input
                              aria-label="Police officer"
                              class="ControlledInput__ControlledInput___2XK3j"
                              data-test-id="ctf-ui-checkbox"
                              id="police"
                              type="checkbox"
                              value=""
                            />
                            <div>
                              Police officer
                            </div>
                          </div>
                        </span>
                      </button>
                    </li>
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                      data-test-id="space-role-editor.role-option"
                    >
                      <button
                        class="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                        data-test-id="cf-ui-dropdown-list-item-button"
                        type="button"
                      >
                        <span
                          class="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          tabindex="-1"
                        >
                          <div
                            class="emotion-1"
                          >
                            <input
                              aria-label="Thief"
                              class="ControlledInput__ControlledInput___2XK3j"
                              data-test-id="ctf-ui-checkbox"
                              id="thief"
                              type="checkbox"
                              value=""
                            />
                            <div>
                              Thief
                            </div>
                          </div>
                        </span>
                      </button>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          }
        >
          <div
            className="DropdownContainer__DropdownContainer___3WlJM"
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          >
            <InViewport
              offset={0}
              onOverflowBottom={[Function]}
              onOverflowLeft={[Function]}
              onOverflowRight={[Function]}
              onOverflowTop={[Function]}
              testId="cf-ui-in-viewport"
            >
              <div
                className="InViewport__InViewport___2o6g4"
                data-test-id="cf-ui-in-viewport"
                offset={0}
              >
                <DropdownList
                  testId="cf-ui-dropdown-list"
                >
                  <ul
                    className="DropdownList__DropdownList___2EMLM"
                    data-test-id="cf-ui-dropdown-list"
                    style={
                      Object {
                        "maxHeight": "auto",
                        "overflowY": "visible",
                      }
                    }
                  >
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      onClick={[Function]}
                      testId="space-role-editor.admin-option"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                        data-test-id="space-role-editor.admin-option"
                      >
                        <button
                          className="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                          data-test-id="cf-ui-dropdown-list-item-button"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          type="button"
                        >
                          <TabFocusTrap
                            className="DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          >
                            <span
                              className="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                              tabIndex={-1}
                            >
                              <div
                                className="emotion-1"
                              >
                                <Checkbox
                                  checked={false}
                                  disabled={false}
                                  id="__cf_builtin_admin"
                                  labelText="Admin"
                                  required={false}
                                  testId="ctf-ui-checkbox"
                                  type="checkbox"
                                >
                                  <ControlledInput
                                    checked={false}
                                    disabled={false}
                                    id="__cf_builtin_admin"
                                    labelText="Admin"
                                    required={false}
                                    testId="ctf-ui-checkbox"
                                    type="checkbox"
                                  >
                                    <input
                                      aria-label="Admin"
                                      checked={false}
                                      className="ControlledInput__ControlledInput___2XK3j"
                                      data-test-id="ctf-ui-checkbox"
                                      disabled={false}
                                      id="__cf_builtin_admin"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      required={false}
                                      type="checkbox"
                                    />
                                  </ControlledInput>
                                </Checkbox>
                                <div>
                                  Admin
                                </div>
                                <div
                                  className="emotion-0"
                                >
                                  Can manage everything in the space
                                </div>
                              </div>
                            </span>
                          </TabFocusTrap>
                        </button>
                      </li>
                    </DropdownListItem>
                  </ul>
                </DropdownList>
                <DropdownList
                  border="top"
                  maxHeight={305}
                  testId="cf-ui-dropdown-list"
                >
                  <ul
                    className="DropdownList__DropdownList___2EMLM DropdownList__DropdownList--border-top___ojlyY"
                    data-test-id="cf-ui-dropdown-list"
                    style={
                      Object {
                        "maxHeight": 305,
                        "overflowY": "auto",
                      }
                    }
                  >
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={true}
                      testId="cf-ui-dropdown-list-item"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem--title___CyVKB"
                        data-test-id="cf-ui-dropdown-list-item"
                      >
                        <span>
                          other roles
                        </span>
                      </li>
                    </DropdownListItem>
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      key="police"
                      onClick={[Function]}
                      testId="space-role-editor.role-option"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                        data-test-id="space-role-editor.role-option"
                      >
                        <button
                          className="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                          data-test-id="cf-ui-dropdown-list-item-button"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          type="button"
                        >
                          <TabFocusTrap
                            className="DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          >
                            <span
                              className="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                              tabIndex={-1}
                            >
                              <div
                                className="emotion-1"
                              >
                                <Checkbox
                                  checked={false}
                                  disabled={false}
                                  id="police"
                                  labelText="Police officer"
                                  required={false}
                                  testId="ctf-ui-checkbox"
                                  type="checkbox"
                                >
                                  <ControlledInput
                                    checked={false}
                                    disabled={false}
                                    id="police"
                                    labelText="Police officer"
                                    required={false}
                                    testId="ctf-ui-checkbox"
                                    type="checkbox"
                                  >
                                    <input
                                      aria-label="Police officer"
                                      checked={false}
                                      className="ControlledInput__ControlledInput___2XK3j"
                                      data-test-id="ctf-ui-checkbox"
                                      disabled={false}
                                      id="police"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      required={false}
                                      type="checkbox"
                                    />
                                  </ControlledInput>
                                </Checkbox>
                                <div>
                                  Police officer
                                </div>
                              </div>
                            </span>
                          </TabFocusTrap>
                        </button>
                      </li>
                    </DropdownListItem>
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      key="thief"
                      onClick={[Function]}
                      testId="space-role-editor.role-option"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP DropdownListItem__DropdownListItem__submenu-toggle___1SVw1"
                        data-test-id="space-role-editor.role-option"
                      >
                        <button
                          className="DropdownListItem__DropdownListItem__button___1Po6h a11y__focus-outline--default___2hwb1"
                          data-test-id="cf-ui-dropdown-list-item-button"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          type="button"
                        >
                          <TabFocusTrap
                            className="DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                          >
                            <span
                              className="TabFocusTrap__TabFocusTrap___39Vty DropdownListItem__DropdownListItem__button__inner-wrapper___LFlkP"
                              tabIndex={-1}
                            >
                              <div
                                className="emotion-1"
                              >
                                <Checkbox
                                  checked={false}
                                  disabled={false}
                                  id="thief"
                                  labelText="Thief"
                                  required={false}
                                  testId="ctf-ui-checkbox"
                                  type="checkbox"
                                >
                                  <ControlledInput
                                    checked={false}
                                    disabled={false}
                                    id="thief"
                                    labelText="Thief"
                                    required={false}
                                    testId="ctf-ui-checkbox"
                                    type="checkbox"
                                  >
                                    <input
                                      aria-label="Thief"
                                      checked={false}
                                      className="ControlledInput__ControlledInput___2XK3j"
                                      data-test-id="ctf-ui-checkbox"
                                      disabled={false}
                                      id="thief"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onFocus={[Function]}
                                      required={false}
                                      type="checkbox"
                                    />
                                  </ControlledInput>
                                </Checkbox>
                                <div>
                                  Thief
                                </div>
                              </div>
                            </span>
                          </TabFocusTrap>
                        </button>
                      </li>
                    </DropdownListItem>
                  </ul>
                </DropdownList>
              </div>
            </InViewport>
          </div>
        </Portal>
      </DropdownContainer>
    </div>
  </Dropdown>
</SpaceRoleEditor>
`;
